--- a/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
@@ -4,15 +4,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane prefHeight="395.0" prefWidth="599.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;            -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controller">
-
-
+<AnchorPane fx:id="scene1AnchorPane" prefHeight="395.0" prefWidth="599.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;            -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controller">
     <children>
-        <Button id="btn_1" defaultButton="true" layoutX="234.0" layoutY="342.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Start" textFill="WHITE" wrapText="true">
+        <Button fx:id="btn_1" defaultButton="true" layoutX="249.0" layoutY="328.0" mnemonicParsing="false" onAction="#startBtnClick" prefHeight="25.0" prefWidth="101.0" text="Start" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold Italic" size="17.0" />
          </font></Button>
-      <Button id="omar" layoutX="274.0" layoutY="185.0" mnemonicParsing="false" onAction="#omar_onaction" text="Button" />
     </children>
 
-</Pane>
+</AnchorPane>
