--- a/src/main/resources/com/example/egyptian_league_management_system/match.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/match.fxml
@@ -11,6 +11,5 @@
           <TableColumn prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="354.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="25.0" prefWidth="83.0" text="Back" />
-   </children>
+       <Button defaultButton="true" layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="25.0" prefWidth="49.0" text="Back" />   </children>
 </AnchorPane>
