--- a/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
@@ -2,14 +2,34 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="scene1AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;            -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controller">
+<AnchorPane fx:id="scene1AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controller">
     <children>
-        <Button fx:id="btn_1" defaultButton="true" layoutX="243.0" layoutY="345.0" mnemonicParsing="false" onAction="#startBtnClick" prefHeight="25.0" prefWidth="101.0" text="Start" textFill="WHITE" wrapText="true">
+        <Button
+
+
+                fx:id="btn_1" alignment="TOP_CENTER" layoutX="243.0" layoutY="345.0" mnemonicParsing="false" onAction="#startBtnClick" prefHeight="25.0" prefWidth="101.0" text="Start" textAlignment="CENTER" wrapText="true" >
          <font>
             <Font name="System Bold Italic" size="17.0" />
-         </font></Button>
+         </font>
+         <textFill>
+            <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.7223974767167485" startY="0.34069400630914826">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill></Button>
     </children>
 
 </AnchorPane>
