--- a/src/main/resources/com/example/egyptian_league_management_system/choose.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/choose.fxml
@@ -2,11 +2,89 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane id="scene2anchorpane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.ChooseController">
    <children>
-      <Button defaultButton="true" layoutX="186.0" layoutY="340.0" mnemonicParsing="false" onAction="#onTeamClick" prefHeight="25.0" prefWidth="87.0" text="TEAM" />
-      <Button defaultButton="true" layoutX="329.0" layoutY="340.0" mnemonicParsing="false" onAction="#onMatchClick" prefHeight="25.0" prefWidth="87.0" text="MATCH" />
-      <Button id="btn1" layoutX="14.0" layoutY="361.0" onAction="#onBackClick" prefHeight="25.0" prefWidth="49.0" text="Back" />
+
+      <Button layoutX="14.0" layoutY="355.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="38.0" prefWidth="64.0" text="Back" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.4132491635975401" startY="0.34069400630914826">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.3631356966084559">
+                     <color>
+                        <Color red="1.0" green="0.20061728358268738" blue="0.20061728358268738" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.05263157933950424" green="0.026640675961971283" blue="0.026640675961971283" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill></Button>
+
+      <Button layoutX="310.0" layoutY="340.0" mnemonicParsing="false" onAction="#onMatchClick" prefHeight="25.0" prefWidth="101.0" text="MATCH" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.4132491635975401" startY="0.34069400630914826">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.3631356966084559">
+                     <color>
+                        <Color red="1.0" green="0.20061728358268738" blue="0.20061728358268738" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.05263157933950424" green="0.026640675961971283" blue="0.026640675961971283" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill></Button>
+
+
+      <Button layoutX="186.0" layoutY="340.0" mnemonicParsing="false" onAction="#onTeamClick" prefHeight="25.0" prefWidth="87.0" text="TEAM" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.4132491635975401" startY="0.34069400630914826">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.3631356966084559">
+                     <color>
+                        <Color red="1.0" green="0.20061728358268738" blue="0.20061728358268738" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.05263157933950424" green="0.026640675961971283" blue="0.026640675961971283" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill></Button>
    </children>
 </AnchorPane>
