--- a/src/main/resources/com/example/egyptian_league_management_system/match.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/match.fxml
@@ -2,19 +2,11 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<AnchorPane id="scene3AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
+<AnchorPane id="scene3AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
    <children>
-      <TableView layoutX="169.0" layoutY="74.0" prefHeight="200.0" prefWidth="200.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
        <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="38.0" prefWidth="64.0" text="Back" textAlignment="CENTER" wrapText="true">
            <font>
                <Font name="System Bold Italic" size="17.0" />
@@ -39,5 +31,12 @@
                        </Stop>
                    </stops>
                </LinearGradient>
-           </textFill></Button>  </children>
+           </textFill></Button>
+      <DialogPane layoutX="69.0" layoutY="83.0" prefHeight="163.0" prefWidth="469.0" />
+      <Label layoutX="139.0" layoutY="101.0" text="Team1" />
+      <Label layoutX="436.0" layoutY="101.0" text="Team2" />
+      <Label layoutX="286.0" layoutY="101.0" text="Date" />
+      <Label layoutX="125.0" layoutY="148.0" text="Referee :" />
+      <Label layoutX="125.0" layoutY="183.0" text="score :" />
+      <Label layoutX="125.0" layoutY="216.0" text="Stadium :" />  </children>
 </AnchorPane>
