--- a/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane fx:id="scene1AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controller">
     <children>
-        <Button alignment="TOP_CENTER" layoutX="243.0" layoutY="345.0" mnemonicParsing="false" onAction="#startBtnClick" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: 0061ff;" text="Start" textAlignment="CENTER" wrapText="true">>
+        <Button alignment="TOP_CENTER" layoutX="243.0" layoutY="345.0" mnemonicParsing="false" onAction="#startBtnClick" prefHeight="25.0" prefWidth="101.0" text="Start" textAlignment="CENTER" wrapText="true">>
             <font>
                 <Font name="System Bold Italic" size="17.0" />
             </font>
