--- a/src/main/resources/com/example/egyptian_league_management_system/choose.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/choose.fxml
@@ -8,7 +8,7 @@
 <AnchorPane id="scene2anchorpane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.ChooseController">
    <children>
 
-      <Button layoutX="14.0" layoutY="355.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="38.0" prefWidth="64.0" text="Back" textAlignment="CENTER" wrapText="true">
+      <Button layoutX="14.0" layoutY="355.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="38.0" prefWidth="87.0" text="Home" wrapText="true">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font>
