--- a/src/main/resources/com/example/egyptian_league_management_system/match.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/match.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="scene3AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
+<AnchorPane id="scene3AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
    <children>
        <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="38.0" prefWidth="64.0" text="Back" textAlignment="CENTER" wrapText="true">
            <font>
@@ -32,7 +32,7 @@
                    </stops>
                </LinearGradient>
            </textFill></Button>
-      <DialogPane layoutX="69.0" layoutY="83.0" prefHeight="194.0" prefWidth="469.0" style="-fx-background-color: #015284;" />
+      <DialogPane layoutX="69.0" layoutY="83.0" prefHeight="194.0" prefWidth="469.0" style="-fx-background-color: #3e434c;" />
       <Label layoutX="139.0" layoutY="101.0" text="Team1" textFill="#fee020">
          <font>
             <Font size="20.0" />
