--- a/src/main/resources/com/example/egyptian_league_management_system/team.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/team.fxml
@@ -1,72 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="scene3anchorpane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.TeamController">
-   <children>
-      <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="38.0" prefWidth="64.0" text="Back" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font name="System Bold Italic" size="17.0" />
-         </font>
-         <textFill>
-            <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.4132491635975401" startY="0.34069400630914826">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.3631356966084559">
-                     <color>
-                        <Color red="1.0" green="0.20061728358268738" blue="0.20061728358268738" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.05263157933950424" green="0.026640675961971283" blue="0.026640675961971283" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </textFill></Button>
-      <DialogPane layoutX="39.0" layoutY="37.0" prefHeight="196.0" prefWidth="519.0" style="-fx-background-color: #3e434c;" />
-      <Label layoutX="274.0" layoutY="50.0" text="Name" textFill="#ff004d">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="90.0" layoutY="107.0" text="Team :" textFill="#3aefff">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="90.0" layoutY="146.0" text="Age :" textFill="#3aefff">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="90.0" layoutY="183.0" text="Position :" textFill="#3aefff">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="306.0" layoutY="107.0" text="Rank :" textFill="#3aefff">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="306.0" layoutY="146.0" text="Score :" textFill="#3aefff">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="306.0" layoutY="183.0" text="Number :" textFill="#3aefff">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-   </children>
+<AnchorPane fx:id="scene3anchorpane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.TeamController">
+
+         <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="600.0" style="-fx-background-color: #303030;">
+            <children>
+               <Label fx:id="name" contentDisplay="CENTER" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="498.0" text="Lionel Messi" textAlignment="CENTER" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB Bold" size="48.0" />
+                  </font>
+               </Label>
+               <Label layoutX="56.0" layoutY="106.0" prefHeight="42.0" prefWidth="112.0" text="Club           :" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="56.0" layoutY="146.0" prefHeight="42.0" prefWidth="112.0" text="Country     :" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="56.0" layoutY="186.0" prefHeight="42.0" prefWidth="112.0" text="Age            :" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="351.0" layoutY="106.0" prefHeight="42.0" prefWidth="112.0" text="Height        :" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="351.0" layoutY="146.0" prefHeight="42.0" prefWidth="112.0" text="Salary        :" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="351.0" layoutY="186.0" prefHeight="42.0" prefWidth="112.0" text="Position      :" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label fx:id="clubName" layoutX="170.0" layoutY="106.0" prefHeight="42.0" prefWidth="179.0" text="Manchaster United" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label fx:id="countryName" layoutX="170.0" layoutY="146.0" prefHeight="42.0" prefWidth="182.0" text="Barcalona" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label fx:id="age" layoutX="170.0" layoutY="186.0" prefHeight="42.0" prefWidth="165.0" text="Barcalona" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label fx:id="height" layoutX="465.0" layoutY="106.0" prefHeight="42.0" prefWidth="137.0" text="Barcalona" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label fx:id="position" layoutX="465.0" layoutY="186.0" prefHeight="42.0" prefWidth="136.0" text="Barcalona" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+               <Label fx:id="salary" layoutX="465.0" layoutY="146.0" prefHeight="42.0" prefWidth="136.0" text="Barcalona" textFill="WHITE">
+                  <font>
+                     <Font name="Agency FB" size="24.0" />
+                  </font>
+               </Label>
+            </children>
+         </AnchorPane>
+
+   <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" text="Back" wrapText="true">
+      <font>
+         <Font name="System Bold Italic" size="15.0" />
+      </font>
+      <textFill>
+         <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.4132491635975401" startY="0.34069400630914826">
+            <stops>
+               <Stop>
+                  <color>
+                     <Color />
+                  </color>
+               </Stop>
+               <Stop offset="0.3631356966084557">
+                  <color>
+                     <Color red="0.48245614767074585" green="0.348440557718277" blue="0.348440557718277" />
+                  </color>
+               </Stop>
+               <Stop offset="1.0">
+                  <color>
+                     <Color red="0.05263157933950424" green="0.026640675961971283" blue="0.026640675961971283" />
+                  </color>
+               </Stop>
+            </stops>
+         </LinearGradient>
+      </textFill>
+      <effect>
+         <Lighting>
+            <bumpInput>
+               <Shadow />
+            </bumpInput>
+
+         </Lighting>
+      </effect></Button>
 </AnchorPane>
