--- a/src/main/resources/com/example/egyptian_league_management_system/team.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/team.fxml
@@ -6,48 +6,47 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="scene3anchorpane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.TeamController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.TeamController">
 
 
-
-   <AnchorPane layoutX="61.0" layoutY="41.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;">
-      <children>
-         <Label fx:id="name" contentDisplay="CENTER" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="112.0" text="Name" textAlignment="CENTER" textFill="WHITE">
-            <font>
-               <Font name="Agency FB Bold" size="48.0" />
-            </font>
-         </Label>
-         <Label layoutX="56.0" layoutY="106.0" prefHeight="42.0" prefWidth="112.0" text="Team  :" textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="24.0" />
-            </font>
-         </Label>
-         <Label layoutX="56.0" layoutY="146.0" prefHeight="42.0" prefWidth="112.0" text="Age   :" textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="24.0" />
-            </font>
-         </Label>
-         <Label layoutX="56.0" layoutY="188.0" prefHeight="42.0" prefWidth="133.0" text="Position  :" textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="24.0" />
-            </font>
-         </Label>
-         <Label layoutX="281.0" layoutY="110.0" text="Rank :" textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="24.0" />
-            </font>
-         </Label>
-         <Label layoutX="281.0" layoutY="150.0" prefHeight="31.0" prefWidth="56.0" text="Score :" textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="24.0" />
-            </font>
-         </Label>
-         <Label layoutX="281.0" layoutY="192.0" text="Number :" textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="24.0" />
-            </font>
-         </Label>
-      </children>
+   <AnchorPane layoutX="61.0" layoutY="41.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+               minWidth="-Infinity" prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;">
+      <Label  contentDisplay="CENTER" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="112.0"
+             text="Name" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="Agency FB Bold" size="48.0"/>
+         </font>
+      </Label>
+      <Label layoutX="56.0" layoutY="106.0" prefHeight="42.0" prefWidth="112.0" text="Team  :" textFill="WHITE">
+         <font>
+            <Font name="Agency FB" size="24.0"/>
+         </font>
+      </Label>
+      <Label layoutX="56.0" layoutY="146.0" prefHeight="42.0" prefWidth="112.0" text="Age   :" textFill="WHITE">
+         <font>
+            <Font name="Agency FB" size="24.0"/>
+         </font>
+      </Label>
+      <Label layoutX="56.0" layoutY="188.0" prefHeight="42.0" prefWidth="133.0" text="Position  :" textFill="WHITE">
+         <font>
+            <Font name="Agency FB" size="24.0"/>
+         </font>
+      </Label>
+      <Label layoutX="281.0" layoutY="110.0" text="Rank :" textFill="WHITE">
+         <font>
+            <Font name="Agency FB" size="24.0"/>
+         </font>
+      </Label>
+      <Label layoutX="281.0" layoutY="150.0" prefHeight="31.0" prefWidth="56.0" text="Score :" textFill="WHITE">
+         <font>
+            <Font name="Agency FB" size="24.0"/>
+         </font>
+      </Label>
+      <Label layoutX="281.0" layoutY="192.0" text="Number :" textFill="WHITE">
+         <font>
+            <Font name="Agency FB" size="24.0"/>
+         </font>
+      </Label>
    </AnchorPane>
 
    <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" text="Back" wrapText="true">
